# docs

./: .gitignore  .markdownlint.yaml  404.html  CNAME  README.md  cf_build.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: build-docs.yml  ci.yml  deploy-docs.yml
0.x/: 404.html  index.html  sitemap.xml
0.x/getting-started/quick-start/: index.html
0.x/references/: index.html
1.x/: 404.html  index.html  sitemap.xml
1.x/getting-started/installation/: index.html
1.x/getting-started/quick-intro/: index.html
1.x/references/config-file/: index.html
1.x/search/: search_index.json
1.x/stylesheets/: extra.css
docs/: .pages  index.md
docs/blueprints/: concepts.md
docs/getting-started/: .pages  installation.md  manual-install.md  quick-intro.md  quick-start.md
docs/getting-started/blueprints/: .pages  concepts.md  overview.md
docs/getting-started/installation/: .pages
docs/getting-started/projects/: .pages  overview.md  permissions.md
docs/getting-started/providers/: .pages  how-it-works.md  overview.md  writing-a-provider.md
docs/references/: .pages  config-file.md  index.md
docs/references/configuration/: config-file.md
docs/references/permissions/: permissions.md
getting-started/blueprints/concepts/: index.html
getting-started/blueprints/overview/: index.html
getting-started/providers/overview/: index.html
getting-started/providers/writing-a-provider/: index.html
getting-started/quick-start/: index.html
overrides/: home.html  main.html
references/: index.html
search/: search_index.json
(+18 files in other folders)
