[tool.poetry]
name = "cble-documentation"
version = "1.0.0"
description = "The documentation for the Cloud-Based Lab Emulator (CBLE)"
authors = ["BradHacker <harkerbd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.17"
mkdocs-awesome-pages-plugin = "^2.9.2"
pillow = "^10.2.0"
cairosvg = "^2.7.1"
mike = "^2.0.0"
mkdocs-glightbox = "^0.3.7"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-git-committers-plugin-2 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
